kustomizations/storage/infisical/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infisical-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infisical-redis
      app.kubernetes.io/name: infisical-redis
  template:
    metadata:
      labels:
        app: infisical-redis
        app.kubernetes.io/name: infisical-redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 5m
            memory: 128Mi
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
