kustomizations/storage/infisical/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical
  annotations:
    external-dns.alpha.kubernetes.io/hostname: infisical.lan
  labels:
    type: LoadBalancer
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.33
  selector:
    app: infisical
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
