kustomizations/storage/infisical/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infisical
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: infisical.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: infisical
              port:
                number: 80
